samples/_failures_safe/1761596232_49199b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9cf720f7.c: In function ‘main’:
./samples/SAFE/__tmp_9cf720f7.c:158: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_9cf720f7.c:157:17: error: expected declaration or statement at end of input
  157 |                 if
      |                 ^~
./samples/SAFE/__tmp_9cf720f7.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9cf720f7.c:157:17: error: expected declaration or statement at end of input
